# DiscordRustBot

./: Cargo.toml  README.md
src/: functions.rs  main.rs  ping.rs
src/commands/: emoji.rs  functions.rs  math.rs  mod.rs  owner.rs
