[package]
name = "discordbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env = "0.0.0"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.23"
tracing-subscriber = "0.3.16"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
default-features = false
version = "0.11"
features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "cache"]